# ParallelProgramming

./: .gitignore
Exo01/: 01-1_Fibonacci.f90  01-1a_Fibonacci.f90  01-1b_Fibonacci.f90  01-2_precision.F90  01-3_types_inheritance.f90
Exo02/: 02_1-derivedTypes.F08  02_2-pointers.F08  02_3-roots.F08  02_4-variance.F08
Exo03/: 03_1-complex_polar-main.f08  03_1-complex_polar.f08  03_2-integration-main.f08  03_2-integration.f08  03_3-montecarlo-modules.f08  03_3-montecarlo.f08
Exo04/: 04_1-complex_polar.f08  04_2-polynomial.f08  04_3-sparseMatrix.f08
Exo05/: 05_1-compile.sh  05_1-integration.c  05_1-integration.f08  05_2-compile.sh  05_2-mandelbrot.f08  plotscript.gnuplot
Exo07/: CMakeLists.txt  abstractmatrix.cpp  abstractmatrix.hpp  defaultmatrix.cpp  defaultmatrix.hpp  defaultrandgen.hpp  interfaces.hpp  main.cpp  mandelbrot.cpp  mandelbrot.gnuplot  matrices.cpp  montecarlo.cpp  sparsematrix.cpp  sparsematrix.hpp  util.cpp
Exo08/: README.TXT  defaultrandgen.cpp  main.cpp  swarm.cpp  swarm.hpp  trajectory.cpp
Exo08/backup/: CMakeLists.txt  trajectory.hpp
Exo08/backup/output/: plot.gnuplot
Exo09/: makefile
Exo10/: makefile
Exo11/: makefile
lifesession/: CTorDTor.f08  IO_file.f08  IO_screen.f08  allocate.f08  array_inquiry.f08  array_intrinsics.f08  auto-alloc-dealloc.f08  ball.f08  case.f08  compare_matrices.f08  concurrent_do.f08  implicit_loop.f08  loop.f08  masks.f08  moveAlloc.f08  overloading.f08  simple_func.F08  simple_mod.F08  simple_sub.F08  sub.f90  sub1.f90  sub_internal.f08  sub_lib.f08  sub_lib_main.f08  sub_vector_lib1.f08  (+4 more)
(+67 files in other folders)
